# baldr

./: CMakeLists.txt  README.md  conanfile.py  conanfile.txt
examples/: gradient_texture.cpp
include/: baldr.hpp  common.hpp  compute_pass.hpp  data_buffer.hpp  data_buffer.ipp  fullscreen_pass.hpp  fullscreen_pass.ipp  offscreen_context.hpp  render_pass.hpp  render_pass.ipp  shader_interop.hpp  shader_interop.ipp  shader_pipeline.hpp  shader_pipeline.ipp  shader_program.hpp  shader_program.ipp  texture.hpp  texture.ipp
include/baldr/: baldr.hpp  framebuffer.hpp  fullscreen_pass.hpp  fullscreen_pass.ipp  render_pass.hpp  render_pass.ipp  shader_program.hpp  shader_program.ipp  texture.hpp  texture.ipp  vertex_array.hpp
src/: compute_pass.cpp  data_buffer.cpp  framebuffer.cpp  fullscreen_pass.cpp  offscreen_context.cpp  render_pass.cpp  shader_interop.cpp  shader_pipeline.cpp  shader_program.cpp  texture.cpp  vertex_array.cpp
